# AP4A_Badge

./: .clang-uml  Badge.cpp  Badge.h  CMakeLists.txt  Person.h  Reader.cpp  Reader.h  Scheduler.cpp  Scheduler.h  Server.cpp  Server.h  const.h  main.cpp  s_Belfort.txt  s_Sevenans.txt  servers.txt
Badge/: Badge.cpp  Badge.h  IBadge.h  StudentBadge.cpp  StudentBadge.h
File/: fileLib.cpp  fileLib.h
Person/: CleanupStaff.cpp  CleanupStaff.h  Doctor.cpp  Doctor.h  IPerson.h  Person.cpp  Person.h  Staff.cpp  Staff.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h
Reader/: BuildingReader.cpp  BuildingReader.h  CleanupReader.cpp  CleanupReader.h  IReader.h  LabReader.cpp  LabReader.h  Reader.cpp  Reader.h  RoomReader.cpp  RoomReader.h  StaffReader.cpp  StaffReader.h  TeacherReader.cpp  TeacherReader.h
Server/: Scheduler.cpp  Scheduler.h  Server.cpp  Server.h
Time/: TimeSlot.cpp  TimeSlot.h  timeLib.cpp  timeLib.h
diagrams/: myproject_class.puml
docs/: main.tex
old/: Badge_old.cpp  Badge_old.h  Reader.cpp  Reader.h
